--- a/doc/smp_conf_general.8
+++ b/doc/smp_conf_general.8
@@ -1,4 +1,4 @@
-.TH SMP_CONF_GENERAL "8" "March 2011" "smp_utils\-0.96" SMP_UTILS
+.TH SMP_CONF_GENERAL "8" "April 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_conf_general \- invoke CONFIGURE GENERAL SMP function
 .SH SYNOPSIS
@@ -11,8 +11,8 @@ smp_conf_general \- invoke CONFIGURE GENERAL SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) CONFIGURE GENERAL
-request function to a SMP target. The SMP target is identified by
+Sends a SAS Management Protocol (SMP) CONFIGURE GENERAL function request
+to a SMP target. The SMP target is identified by
 the \fISMP_DEVICE\fR and the \fI\-\-sa=SAS_ADDR\fR. Depending on the
 interface, the \fISAS_ADDR\fR may be deduced from the \fISMP_DEVICE\fR.
 The mpt interface uses \fISMP_DEVICE\fR
