--- a/doc/smp_conf_zone_man_pass.8
+++ b/doc/smp_conf_zone_man_pass.8
@@ -11,8 +11,8 @@ smp_conf_zone_man_pass \- invoke CONFIGURE ZONE MANAGER PASSWORD function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) CONFIGURE ZONE MANAGER PASSWORD request
-function to a SMP target. The SMP target is identified by the \fISMP_DEVICE\fR
+Sends a SAS Management Protocol (SMP) CONFIGURE ZONE MANAGER PASSWORD function
+request to a SMP target. The SMP target is identified by the \fISMP_DEVICE\fR
 and the \fI\-\-sa=SAS_ADDR\fR. Depending on the interface, the \fISAS_ADDR\fR
 may be deduced from the \fISMP_DEVICE\fR. The mpt interface uses
 \fISMP_DEVICE\fR to identify a HBA (an SMP initiator) and needs the additional
