--- a/doc/smp_discover.8
+++ b/doc/smp_discover.8
@@ -1,4 +1,4 @@
-.TH SMP_DISCOVER "8" "March 2011" "smp_utils\-0.96" SMP_UTILS
+.TH SMP_DISCOVER "8" "April 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_discover \- invoke DISCOVER SMP function
 .SH SYNOPSIS
@@ -10,7 +10,7 @@ smp_discover \- invoke DISCOVER SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) DISCOVER request function to a SMP
+Sends a SAS Management Protocol (SMP) DISCOVER function request to a SMP
 target and decodes or outputs the response. The SMP target is identified by
 the \fISMP_DEVICE\fR and the \fISAS_ADDR\fR. Depending on the interface,
 the \fISAS_ADDR\fR may be deduced from the \fISMP_DEVICE\fR.
