--- a/doc/smp_ena_dis_zoning.8
+++ b/doc/smp_ena_dis_zoning.8
@@ -1,4 +1,4 @@
-.TH SMP_ENA_DIS_ZONING "8" "March 2011" "smp_utils\-0.96" SMP_UTILS
+.TH SMP_ENA_DIS_ZONING "8" "April 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_ena_dis_zoning \- invoke ENABLE DISABLE ZONING SMP function
 .SH SYNOPSIS
@@ -10,7 +10,7 @@ smp_ena_dis_zoning \- invoke ENABLE DISABLE ZONING SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) ENABLE DISABLE ZONING request function
+Sends a SAS Management Protocol (SMP) ENABLE DISABLE ZONING function request
 to a SMP target. The SMP target is identified by the \fISMP_DEVICE\fR and the
 \fI\-\-sa=SAS_ADDR\fR. Depending on the interface, the \fISAS_ADDR\fR may
 be deduced from the \fISMP_DEVICE\fR. The mpt interface uses \fISMP_DEVICE\fR
