--- a/doc/smp_write_gpio.8
+++ b/doc/smp_write_gpio.8
@@ -1,4 +1,4 @@
-.TH SMP_WRITE_GPIO "8" "March 2011" "smp_utils\-0.96" SMP_UTILS
+.TH SMP_WRITE_GPIO "8" "April 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_write_gpio \- invoke WRITE GPIO REGISTER SMP function
 .SH SYNOPSIS
@@ -10,7 +10,7 @@ smp_write_gpio \- invoke WRITE GPIO REGISTER SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) WRITE GPIO REGISTER request function
+Sends a SAS Management Protocol (SMP) WRITE GPIO REGISTER function request
 to a SMP target. The SMP target is identified by the \fISMP_DEVICE\fR and
 the \fISAS_ADDR\fR. Depending on the interface, the \fISAS_ADDR\fR may be
 deduced from the \fISMP_DEVICE\fR. The mpt interface uses \fISMP_DEVICE\fR
@@ -25,6 +25,15 @@ that lives in a host bus adapter (HBA) and allows SMP to manipulate
 the sideband signals in wide internal cables. To stop other initiators
 in a multi\-initiator domain from accessing those sideband signals,
 the virtual SMP (target) port is not indicated in a DISCOVER response.
+.PP
+In SAS\-2 this function was made obsolete and seemingly replaced by a
+function called WRITE GPIO REGISTER ENHANCED with a reference to the
+same SFF document. However the author can find no version of SFF\-8485
+that defines the WRITE GPIO REGISTER ENHANCED function. In SAS\-2.1
+both the WRITE GPIO REGISTER and WRITE GPIO REGISTER ENHANCED functions
+were dropped.
+.SH OPTIONS
+Mandatory arguments to long options are mandatory for short options as well.
 .TP
 \fB\-c\fR, \fB\-\-count\fR=\fICO\fR
 where \fICO\fR is the register count. This is the number of (4 byte)
@@ -85,7 +94,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2008 Douglas Gilbert
+Copyright \(co 2006\-2011 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
