--- a/trunk/doc/smp_conf_route_info.8
+++ b/trunk/doc/smp_conf_route_info.8
@@ -11,7 +11,7 @@ smp_conf_route_info \- invoke CONFIGURE ROUTE INFORMATION SMP function
 .\" Add any additional description here
 .PP
 Sends a SAS Management Protocol (SMP) CONFIGURE ROUTE INFORMATION
-request function to a SMP target. The SMP target is identified by
+function request to a SMP target. The SMP target is identified by
 the \fISMP_DEVICE\fR and the \fI\-\-sa=SAS_ADDR\fR. Depending on the
 interface, the \fISAS_ADDR\fR may be deduced from the \fISMP_DEVICE\fR.
 The mpt interface uses \fISMP_DEVICE\fR
