--- a/trunk/doc/smp_discover_list.8
+++ b/trunk/doc/smp_discover_list.8
@@ -1,4 +1,4 @@
-.TH SMP_DISCOVER_LIST "8" "March 2011" "smp_utils\-0.96" SMP_UTILS
+.TH SMP_DISCOVER_LIST "8" "April 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_discover_list \- invoke DISCOVER LIST SMP function
 .SH SYNOPSIS
@@ -12,7 +12,7 @@ smp_discover_list \- invoke DISCOVER LIST SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) DISCOVER LIST request function to a
+Sends a SAS Management Protocol (SMP) DISCOVER LIST function request to a
 SMP target and decodes or outputs the response. The SMP target is identified
 by the \fISMP_DEVICE\fR and the \fISAS_ADDR\fR. Depending on the interface,
 the \fISAS_ADDR\fR may be deduced from the \fISMP_DEVICE\fR. The mpt interface
