--- a/trunk/doc/smp_phy_control.8
+++ b/trunk/doc/smp_phy_control.8
@@ -1,4 +1,4 @@
-.TH SMP_PHY_CONTROL "8" "March 2011" "smp_utils\-0.96" SMP_UTILS
+.TH SMP_PHY_CONTROL "8" "April 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_phy_control \- invoke PHY CONTROL SMP function
 .SH SYNOPSIS
@@ -12,7 +12,7 @@ smp_phy_control \- invoke PHY CONTROL SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) PHY CONTROL request function to a SMP
+Sends a SAS Management Protocol (SMP) PHY CONTROL function request to a SMP
 target. The SMP target is identified by the \fISMP_DEVICE\fR and the
 \fISAS_ADDR\fR. Depending on the interface, the \fISAS_ADDR\fR may be deduced
 from the \fISMP_DEVICE\fR. The mpt interface uses \fISMP_DEVICE\fR
