--- a/trunk/doc/smp_phy_test.8
+++ b/trunk/doc/smp_phy_test.8
@@ -1,4 +1,4 @@
-.TH SMP_PHY_TEST "8" "March 2011" "smp_utils\-0.96" SMP_UTILS
+.TH SMP_PHY_TEST "8" "April 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_phy_test \- invoke PHY TEST FUNTION SMP function
 .SH SYNOPSIS
@@ -12,8 +12,8 @@ smp_phy_test \- invoke PHY TEST FUNTION SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) PHY TEST FUNCTION request to a SMP
-target. The SMP target is identified by the \fISMP_DEVICE\fR and the
+Sends a SAS Management Protocol (SMP) PHY TEST FUNCTION function request to
+a SMP target. The SMP target is identified by the \fISMP_DEVICE\fR and the
 \fISAS_ADDR\fR. Depending on the interface, the \fISAS_ADDR\fR may be deduced
 from the \fISMP_DEVICE\fR. The mpt interface uses \fISMP_DEVICE\fR
 to identify a HBA (an SMP initiator) and needs the additional \fI,N\fR to
