--- a/trunk/doc/smp_rep_exp_route_tbl.8
+++ b/trunk/doc/smp_rep_exp_route_tbl.8
@@ -1,4 +1,4 @@
-.TH SMP_REP_EXP_ROUTE_TBL "8" "March 2011" "smp_utils\-0.96" SMP_UTILS
+.TH SMP_REP_EXP_ROUTE_TBL "8" "April 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_rep_exp_route_tbl \- invoke REPORT EXPANDER ROUTE TABLE LIST SMP function
 .SH SYNOPSIS
@@ -10,11 +10,11 @@ smp_rep_exp_route_tbl \- invoke REPORT EXPANDER ROUTE TABLE LIST SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) REPORT EXPANDER ROUTE TABLE LIST request
-function to a SMP target and decodes or outputs the response. The SMP target
-is identified by the \fISMP_DEVICE\fR and the \fISAS_ADDR\fR. Depending on
-the interface, the \fISAS_ADDR\fR may be deduced from the \fISMP_DEVICE\fR.
-The mpt interface uses \fISMP_DEVICE\fR
+Sends a SAS Management Protocol (SMP) REPORT EXPANDER ROUTE TABLE LIST
+function request to a SMP target and decodes or outputs the response. The SMP
+target is identified by the \fISMP_DEVICE\fR and the \fISAS_ADDR\fR.
+Depending on the interface, the \fISAS_ADDR\fR may be deduced from the
+\fISMP_DEVICE\fR. The mpt interface uses \fISMP_DEVICE\fR
 to identify a HBA (an SMP initiator) and needs the additional \fI,N\fR to
 differentiate between HBAs if there are multiple present.
 .SH OPTIONS
