--- a/trunk/doc/smp_rep_phy_event.8
+++ b/trunk/doc/smp_rep_phy_event.8
@@ -10,7 +10,7 @@ smp_rep_phy_event \- invoke REPORT PHY EVENT SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) REPORT PHY EVENT request function
+Sends a SAS Management Protocol (SMP) REPORT PHY EVENT function request
 to a SMP target. The SMP target is identified by the \fISMP_DEVICE\fR and
 the \fISAS_ADDR\fR. Depending on the interface, the \fISAS_ADDR\fR may be
 deduced from the \fISMP_DEVICE\fR. The mpt interface uses \fISMP_DEVICE\fR
