--- a/trunk/doc/smp_rep_route_info.8
+++ b/trunk/doc/smp_rep_route_info.8
@@ -1,4 +1,4 @@
-.TH SMP_REP_ROUTE_INFO "8" "March 2011" "smp_utils\-0.96" SMP_UTILS
+.TH SMP_REP_ROUTE_INFO "8" "April 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_rep_route_info \- invoke REPORT ROUTE INFORMATION SMP function
 .SH SYNOPSIS
@@ -10,9 +10,9 @@ smp_rep_route_info \- invoke REPORT ROUTE INFORMATION SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) REPORT ROUTE INFORMATION function to
-a SMP target. The SMP target is identified by the \fISMP_DEVICE\fR and the
-\fISAS_ADDR\fR. Depending on the interface, the \fISAS_ADDR\fR may be
+Sends a SAS Management Protocol (SMP) REPORT ROUTE INFORMATION function
+request to a SMP target. The SMP target is identified by the \fISMP_DEVICE\fR
+and the \fISAS_ADDR\fR. Depending on the interface, the \fISAS_ADDR\fR may be
 deduced from the \fISMP_DEVICE\fR. The mpt interface uses \fISMP_DEVICE\fR
 to identify a HBA (an SMP initiator) and needs the additional \fI,N\fR to
 differentiate between HBAs if there are multiple present.
