--- a/trunk/doc/smp_zone_activate.8
+++ b/trunk/doc/smp_zone_activate.8
@@ -1,4 +1,4 @@
-.TH SMP_ZONE_ACTIVATE "8" "March 2011" "smp_utils\-0.96" SMP_UTILS
+.TH SMP_ZONE_ACTIVATE "8" "April 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_zone_activate \- invoke ZONE ACTIVATE SMP function
 .SH SYNOPSIS
@@ -9,7 +9,7 @@ smp_zone_activate \- invoke ZONE ACTIVATE SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) ZONE ACTIVATE request function to a
+Sends a SAS Management Protocol (SMP) ZONE ACTIVATE function request to a
 SMP target. The SMP target is identified by the \fISMP_DEVICE\fR and the
 \fI\-\-sa=SAS_ADDR\fR. Depending on the interface, the \fISAS_ADDR\fR may
 be deduced from the \fISMP_DEVICE\fR. The mpt interface uses \fISMP_DEVICE\fR
