--- a/trunk/doc/smp_zoned_broadcast.8
+++ b/trunk/doc/smp_zoned_broadcast.8
@@ -11,7 +11,7 @@ smp_zoned_broadcast \- invoke ZONED BROADCAST SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) ZONED BROADCAST request function to a
+Sends a SAS Management Protocol (SMP) ZONED BROADCAST function request to a
 SMP target. The SMP target is identified by the \fISMP_DEVICE\fR and the
 \fI\-\-sa=SAS_ADDR\fR. Depending on the interface, the \fISAS_ADDR\fR may
 be deduced from the \fISMP_DEVICE\fR. The mpt interface uses \fISMP_DEVICE\fR
