--- a/doc/smp_zoned_broadcast.8
+++ b/doc/smp_zoned_broadcast.8
@@ -30,8 +30,8 @@ the request arrives then the target ignores the request and sets a
 function result of "invalid expander change count" in the response.
 .TP
 \fB\-F\fR, \fB\-\-fszg\fR=\fIFS\fR
-where \fIFS\fR is a filename which contains one or more source zone
-groups to send a broadcast to. The zone groups can be given in
+where \fIFS\fR is the name of a file which contains one or more source
+zone groups to send a broadcast to. The zone groups can be given in
 decimal (default) or hexadecimal prefixed by '0x' (or '0X') or
 with a 'h' (or 'H') suffix. A zone group is a number in the range 0
 to 255. Each zone group can be separated by space, tab, comma or
