--- a/doc/smp_rep_zone_man_pass.8
+++ b/doc/smp_rep_zone_man_pass.8
@@ -5,7 +5,7 @@ smp_rep_zone_man_pass \- invoke REPORT ZONE MANAGER PASSWORD function
 .B smp_rep_zone_man_pass
 [\fI\-\-fpass=FP\fR] [\fI\-\-help\fR] [\fI\-\-hex\fR]
 [\fI\-\-interface=PARAMS\fR] [\fI\-\-phex\fR] [\fI\-\-raw\fR]
-[\fI\-\-sa=SAS_ADDR\fR] [\fI\-\-type=RT\fR] [\fI\-\-verbose\fR]
+[\fI\-\-report=RT\fR] [\fI\-\-sa=SAS_ADDR\fR] [\fI\-\-verbose\fR]
 [\fI\-\-version\fR] \fISMP_DEVICE[,N]\fR
 .SH DESCRIPTION
 .\" Add any additional description here
@@ -47,18 +47,18 @@ nos leading "0x" nor trailing "h").
 \fB\-r\fR, \fB\-\-raw\fR
 send the response to stdout in binary. All error messages are sent to stderr.
 .TP
+\fB\-R\fR, \fB\-\-report\fR=\fIRT\fR
+set the 'report type' field in the SMP request. \fIRT\fR may take these
+values: 0 for report the current zone manager password (default); 1 is
+reserved; 2 for report the saved zone manager password; 3 for report the
+default zone manager password.
+.TP
 \fB\-s\fR, \fB\-\-sa\fR=\fISAS_ADDR\fR
 specifies the SAS address of the SMP target device. The mpt interface needs
 this option and it will typically be an expander's SAS address. The
 \fISAS_ADDR\fR is in decimal but most SAS addresses are shown in hexadecimal.
 To give a number in hexadecimal either prefix it with '0x' or put a
 trailing 'h' on it.
-.TP
-\fB\-t\fR, \fB\-\-type\fR=\fIRT\fR
-set the 'report type' field in the SMP request. \fIRT\fR may take these
-values: 0 for report the current zone manager password (default); 1 is
-reserved; 2 for report the saved zone manager password; 3 for report the
-default zone manager password.
 .TP
 \fB\-v\fR, \fB\-\-verbose\fR
 increase the verbosity of the output. Can be used multiple times.
