--- a/doc/smp_conf_zone_phy_info.8
+++ b/doc/smp_conf_zone_phy_info.8
@@ -17,6 +17,13 @@ may be deduced from the \fISMP_DEVICE\fR. The mpt interface uses
 \fISMP_DEVICE\fR to identify a HBA (an SMP initiator) and needs the
 additional \fI,N\fR to differentiate between HBAs if there are multiple
 present.
+.PP
+Each zone phy configuration descriptor is 4 bytes long. The first byte
+is a (expander) phy identifier. The second byte has 3 modifiable bits: bit 5
+is "inside ZPSDS persistent"; bit 4 is "requested inside ZPSDS"; and bit 2
+is "zone group persistent". The other bits in the second byte are reserved
+and should be 0. The third byte is reserved and should be 0. The fourth byte
+is the zone group.
 .SH OPTIONS
 Mandatory arguments to long options are mandatory for short options as well.
 maximum connection time limit.
@@ -41,10 +48,12 @@ path through the operating system to the SMP initiator. See the smp_utils
 man page for more information.
 .TP
 \fB\-p\fR, \fB\-\-pconf\fR=\fIFN\fR
-FN is a file containing zone phy configuration descriptors in ASCII
+\fIFN\fR is a file containing zone phy configuration descriptors in ASCII
 hexadecimal; either as bytes separated by space, tab, comma or newline,
 or as longer strings of hexadecimal bytes in which every 2 digits
 represents a byte. Empty lines and those starting with "#" are ignored.
+Since each zone phy configuration descriptor is 4 bytes long, the number
+of bytes in \fIFN\fR is expected to be a multiple of 4.
 .TP
 \fB\-r\fR, \fB\-\-raw\fR
 send the response to stdout in binary. All error messages are sent to stderr.
